<resources>
    <string name="app_name">ICU Timetable App</string>
    <string name="hello_user">Hello, User!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="app_logo">App Logo</string>
    <string name="icu_timetable">ICU Timetable</string>
    <string name="add_event">Add Event</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="menu">Admin Dashboard</string>
    <string name="logout">Logout</string>
    <string name="welcome_admin">Welcome, Admin!</string>
    <string name="welcome_lecturer">Welcome Lecturer</string>
    <string name="welcome_student">Welcome Student</string>
    <string name="account_icon">Account Description</string>
    <string name="course_icon">Courses</string>
    <string name="timetable_icon">Timetable icon</string>
    <string name="timetable">Timetable</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon">notifications icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="settings">Settings</string>
    <string name="dashboard_icon">dashboard icon</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account">Account</string>
    <string name="courses">Courses</string>
    <string name="user_accounts">User Accounts</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="user_roles">
        <item>Admin</item>
        <item>Lecturer</item>
        <item>Student</item>
    </string-array>
</resources>