<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/white"    android:padding="16dp"    tools:context=".LoginActivity">    <TextView        android:id="@+id/loginTitle"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:gravity="center"        android:text="@string/login"        android:textSize="84sp"        android:textColor="@color/blue"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <ImageView        android:layout_width="256dp"        android:layout_height="253dp"        android:contentDescription="@string/dashboard_icon"        android:src="@drawable/ic_login"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.497"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/loginTitle"        app:layout_constraintVertical_bias="0.054" />    <EditText            android:id="@+id/loginEmail"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:autofillHints="Email"            android:hint="@string/email"            android:inputType="textEmailAddress"            android:padding="12dp"            android:background="@drawable/edittext_border"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintTop_toTopOf="parent"            android:layout_marginTop="450dp"            android:layout_marginBottom="8dp"            android:layout_marginStart="16dp"            android:layout_marginEnd="16dp"            app:layout_constraintBottom_toTopOf="@+id/loginPassword"            />        <EditText            android:id="@+id/loginPassword"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:autofillHints="@string/password"            android:hint="@string/password"            android:inputType="textPassword"            android:padding="12dp"            android:background="@drawable/edittext_border"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintTop_toTopOf="parent"            android:layout_marginBottom="16dp"            android:layout_marginStart="16dp"            android:layout_marginEnd="16dp"            app:layout_constraintBottom_toTopOf="@+id/loginButton"            app:layout_constraintTop_toBottomOf="@+id/loginEmail"            />        <Button            android:id="@+id/loginButton"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:text="@string/login"            android:textColor="@color/white"            android:layout_marginBottom="16dp"            android:layout_marginStart="16dp"            android:layout_marginEnd="16dp"            app:layout_constraintBottom_toTopOf="@+id/loginPassword"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintTop_toBottomOf="@+id/loginPassword"            /></androidx.constraintlayout.widget.ConstraintLayout>